# SDIZO_2

./: CMakeLists.txt  README.md  dane.txt  main.cpp  notes.txt
MST/: MST.cpp  MST.h
shortest-path/: ShortestPath.cpp  ShortestPath.h
structures/: Queue.cpp  Queue.h  Tree.cpp  Tree.h
tests/: tests.txt
util/: Time.cpp  Time.h
